--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+body,
+html {
+    height: 100%;
+    width: 100%;
+    margin: 0;
+}
+
 .card {
     flex-direction: row !important;
+}
+
+.day:hover {
+    cursor: pointer;
+    background-color: beige;
 }
