--- a/styles/style.css
+++ b/styles/style.css
@@ -279,6 +279,10 @@ ul li.editMode label {
     transition: 0.3s;
 }
 
+.empty.day:hover {
+    cursor: default;
+}
+
 .active-day:hover {
     background-color: burlywood;
 }
