--- a/styles/style.css
+++ b/styles/style.css
@@ -115,6 +115,8 @@ body,
 ul {
     margin: 0;
     padding: 0;
+    background-color: rgb(185, 255, 255);
+    border: 1px solid rgb(0, 0, 0);
 }
 
 li * {
@@ -132,38 +134,21 @@ button {
     outline: none;
 }
 
-button {
-    background-color: #008CBA;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    padding: 5px;
-    margin: 5px;
-    font-size: 13px;
-    border-radius: 10%;
-}
-
-button:hover {
-    background: #2079b0;
-    text-decoration: none;
-    cursor: pointer;
-}
-
 
 /* Heading */
 
-h3,
+h4,
 label[for='new-task'] {
-    color: #333;
-    font-weight: 700;
-    font-size: 15px;
-    border-bottom: 2px solid #333;
-    padding: 30px 0 10px;
-    margin: 0;
-    text-transform: uppercase;
+  background-color: rgb(4, 125, 129);
+    color: rgb(255, 255, 255);
+    font-weight: 500;
+    font-size: 5px;
+    border: 2px solid #333;
+    padding: 10px 0 10px 10px;
+    margin: 5px;
+    border-radius: 5px;
+    text-align: left;
+    opacity: 80%;
 }
 
 input[type="text"] {
@@ -202,7 +187,7 @@ input#new-task {
 li {
     overflow: hidden;
     padding: 20px 0;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid rgb(0, 0, 0);
 }
 
 li>input[type="checkbox"] {
@@ -281,4 +266,81 @@ ul li.editMode label {
 
 .active-day:hover {
     background-color: burlywood;
+}
+
+.edit {
+  background-color: #1784c3;
+  color: #ffffff;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border: 1px solid #105279;
+  font-weight: 500;
+  padding: 0.3em 1.2em;
+  border-radius: 50px;
+  margin-left: 10px;
+}
+
+.edit:hover {
+  background: #06a1d4;
+  border: 1px solid #105279;
+}
+
+.delete {
+  background-color: rgb(250, 82, 82);
+  color: #ffffff;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border: 1px solid #701500;
+  font-weight: 500;
+  padding: 0.3em 1.2em;
+  border-radius: 50px;
+  margin-left: 10px;
+}
+
+.delete:hover {
+  background: rgb(255, 131, 131);
+  border: 1px solid #701500;
+  color: #ffffff;
+}
+
+.submitBtn {
+  background-color: rgb(43, 184, 118);
+  color: #ffffff;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border: 1px solid #0e7c49;
+  font-weight: 500;
+  padding: 0.4em 1.8em;
+  border-radius: 50px;
+margin: 10px 0 30px 10px;
+}
+
+.submitBtn:hover {
+  background: rgb(80, 192, 140);
+  border: 1px solid #0e7c49;
+}
+
+.addBtn {
+  background-color: #1784c3;
+  color: #ffffff;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  border: 1px solid #105279;
+  font-weight: 500;
+  padding: 0.4em 1.6em;
+  border-radius: 50px;
+  margin: 10px 0 30px 10px;
+}
+
+.addBtn:hover {
+  background: #06a1d4;
+  border: 1px solid #105279;
+}
+
+.side {
+  height: 48em;
 }
