removed background color for label

--- a/styles/style.css
+++ b/styles/style.css
@@ -219,7 +219,7 @@ ul li.editMode label {
 
 .aside {
     height: 100vh;
-    background-color: cyan
+    background-color: rgb(0, 155, 155)
 }
 
 .display-eddit-form {
