--- a/styles/todo.css
+++ b/styles/todo.css
@@ -1,15 +1,11 @@
-/* Todo-list layout */
-
-.container {
-    display: block;
-    width: 40vw;
-    margin: 50px auto 0;
-}
+/*------------------------------------------------------------------
+    TODO-LIST LAYOUT
+-------------------------------------------------------------------*/
 
 ul {
     margin: 0;
     padding: 0;
-    background-color: rgb(185, 255, 255);
+    background-color: rgb(240, 145, 21);
     border: 1px solid rgb(0, 0, 0);
 }
 
@@ -33,7 +29,7 @@ button {
 
 h4,
 label[for='new-task'] {
-    background-color: rgb(4, 125, 129);
+    background-color: rgb(77, 78, 78);
     color: rgb(255, 255, 255);
     font-weight: 500;
     font-size: 5px;
@@ -87,8 +83,98 @@ li>.delete:hover {
     color: #CF2323;
 }
 
+/*------------------------------------------------------------------
+    MAIN
+-------------------------------------------------------------------*/
 
-/* Edit Task */
+.main {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+    background-color: rgb(77, 78, 78);
+}
+
+.main-side-width {
+    height: 100vh;
+    width: 30em;
+}
+
+/*------------------------------------------------------------------
+    LOGO, DATE & CLOCK
+-------------------------------------------------------------------*/
+
+.logo-clock-todo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo-clock {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo {
+    margin-top: 10px;
+}
+
+/*------------------------------------------------------------------
+    MOBILE BUTTONS FOR MONTH & YEAR
+-------------------------------------------------------------------*/
+
+.mobile-month-year-btns {
+    display: none;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
+
+.month-Btn {
+    background-color: #1784c3;
+    border: 1px solid #105279;
+    color: white;
+    text-align: center;
+    font-size: 14pt;
+    padding: 5px;
+    position: relative;
+    width: 30%;
+    margin: 0 10px;
+    cursor: pointer;
+    transition: .5s background-color;
+}
+
+.year-Btn {
+    background-color: #1784c3;
+    border: 1px solid #105279;
+    color: white;
+    text-align: center;
+    font-size: 14pt;
+    padding: 5px;
+    position: relative;
+    width: 30%;
+    margin: 0 10px;
+    cursor: pointer;
+    transition: .5s background-color;
+}
+
+/*------------------------------------------------------------------
+    SIDEBAR FOR TODOS
+-------------------------------------------------------------------*/
+
+.sidebar {
+    margin-top: 13px;
+}
+
+/*------------------------------------------------------------------
+    EDIT
+-------------------------------------------------------------------*/
 
 ul li input[type=text] {
     display: none;
@@ -112,12 +198,17 @@ ul li.editMode label {
     font-weight: 500;
     padding: 0.3em 1.2em;
     border-radius: 50px;
+    transition: 0.3s;
 }
 
 .edit:hover {
     background: #06a1d4;
     border: 1px solid #105279;
 }
+
+/*------------------------------------------------------------------
+    DELETE
+-------------------------------------------------------------------*/
 
 .delete {
     background-color: rgb(250, 82, 82);
@@ -130,6 +221,7 @@ ul li.editMode label {
     padding: 0.3em 1.2em;
     border-radius: 50px;
     margin-left: 10px;
+    transition: 0.3s;
 }
 
 .delete:hover {
@@ -137,6 +229,10 @@ ul li.editMode label {
     border: 1px solid #701500;
     color: #ffffff;
 }
+
+/*------------------------------------------------------------------
+    GODKÄNN
+-------------------------------------------------------------------*/
 
 .submitBtn {
     background-color: rgb(43, 184, 118);
@@ -149,12 +245,17 @@ ul li.editMode label {
     padding: 0.4em 1.8em;
     border-radius: 50px;
     margin-bottom: 10px;
+    transition: 0.3s;
 }
 
 .submitBtn:hover {
     background: rgb(80, 192, 140);
     border: 1px solid #0e7c49;
 }
+
+/*------------------------------------------------------------------
+    LÄGG TILL
+-------------------------------------------------------------------*/
 
 .addBtn {
     background-color: #1784c3;
@@ -167,6 +268,7 @@ ul li.editMode label {
     padding: 0.4em 2.6em;
     border-radius: 50px;
     margin: 10px 0 30px 0;
+    transition: 0.3s;
 }
 
 .addBtn:hover {
@@ -174,17 +276,53 @@ ul li.editMode label {
     border: 1px solid #105279;
 }
 
-.sidebar {
-    margin-top: 13px;
+/*------------------------------------------------------------------
+    DISPLAY-FORM
+-------------------------------------------------------------------*/
+
+.display-form {
+    display: none;
 }
 
-.aside {
-    height: 100vh;
-    background-color: rgb(0, 155, 155)
-}
+/*------------------------------------------------------------------
+    EDDIT-FORM
+-------------------------------------------------------------------*/
 
 .display-eddit-form {
     display: none;
+}
+
+.edit-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.edit-form .start-end {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+/*------------------------------------------------------------------
+    !!!!!!!!!        SECTION1       !!!!!!!!!
+    DIVs TO SHOW WHEN EACH TODO STARTS & ENDS
+-------------------------------------------------------------------*/
+
+.sidebar-heading {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.section1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .divStartEnd{
@@ -228,23 +366,16 @@ ul li.editMode label {
 
 }
 
-.section1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
 .divTodo {
   display: inline-block;
   color: #000000;
   position: relative;
   margin-bottom: 8px;
-  background: #1784c3;
+  background: rgb(255, 179, 81);
   border-radius: 3px;
   padding: 0 15px;
   text-align: center;
-  width: 12em;
+  min-width: 14em;
   opacity: 80%;
 }
 
@@ -285,32 +416,6 @@ label {
     margin: 5px;
 }
 
-.display-form {
-    display: none;
-}
-
-.sidebar-heading {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.edit-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.edit-form .start-end {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
-
 
 /*------------------------------------------------------------------
     !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
@@ -320,9 +425,23 @@ label {
     !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 -------------------------------------------------------------------*/
 
-@media screen and (min-width: 1200px) {
-.col-3 {
-    min-width: 25%;
-    max-width: 50%;
+@media (max-width:750px) {
+.main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100%;
+    background-color: rgb(77, 78, 78)
 }
+.main-side-width {
+    height: 100vh;
+    width: 100%;
+}
+
+.mobile-month-year-btns {
+    display: flex;
+}
+
 }
