--- a/styles/calendar.css
+++ b/styles/calendar.css
@@ -4,9 +4,9 @@
     justify-content: center;
     align-items: center;
     background-color: white;
-    padding: 20px;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.4);
-    height: 100vh;
+    padding: 20px 20px 0px 20px;
+    /* box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.4); */
+    height: 100%;
     width: 100%;
 }
 
@@ -64,20 +64,20 @@
 }
 
 .calendar .calendar-dates .days .day {
-    /* display: flex; */
-        display: flex;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     float: left;
-    width: 12%;
+    width: 12.2%;
     margin: 1%;
-    padding: 1%;
+    /* padding: 1%; */
     font-size: 13pt;
     text-align: center;
-    height: 10vh;
+    /* height: 10vh; */
     border: solid 1px #ddd;
-    height: 5.5rem;
+    /* height: 5.7rem; */
+    height: 15%;
 }
 
 .calendar .calendar-dates .days .day.empty {
@@ -91,25 +91,13 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    height: 5%;
 }
 
 .calendar-dates {
     width: 100%;
+    height: 100%;
 }
-
-
-/* .calendar .calendar-dates .days .day.selected {
-    background-color: #1caff6;
-    color: white;
-    cursor: pointer;
-    opacity: .5;
-    transition: .5s opacity;
-} */
-
-
-/* .calendar .calendar-dates .days .day.selected:hover {
-    opacity: 1;
-} */
 
 .calendar .calendar-dates .days .day.label {
     height: 40px;
@@ -138,6 +126,23 @@
     transition: 0.3s;
 }
 
+.days {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.holiday {
+    order: 1;
+    margin: 0;
+    flex: 1;
+}
+
+.day span {
+    pointer-events: none;
+    margin-top: 0;
+    flex: 0;
+}
+
 .day p {
     color: red;
     font-weight: 600;
@@ -146,7 +151,9 @@
 }
 
 .todo-count {
-    margin: 10px 0 0 0;
+    align-self: flex-end;
+    order: 2;
+    margin: 10px 5px 0 0;
 }
 
 .day:hover {
@@ -163,10 +170,18 @@
     cursor: default;
 }
 
-.daySpan {
-    margin-top: 8px;
+.full-height {
+    height: 85%;
 }
 
+.weekdays {
+    height: 10%;
+}
+
+
+/* .daySpan {
+    margin-top: 8px;
+} */
 
 
 /*------------------------------------------------------------------
@@ -177,7 +192,7 @@
     !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
 -------------------------------------------------------------------*/
 
-@media  (max-width: 960px) {
+@media (max-width: 960px) {
     .calendar {
         width: 100%;
         margin: 0px;
@@ -189,7 +204,7 @@
 }
 
 @media (max-width:750px) {
-.calendar {
-    display: none;
-}
+    .calendar {
+        display: none;
+    }
 }
