--- a/styles/todo.css
+++ b/styles/todo.css
@@ -58,6 +58,7 @@ input[type="text"]:focus {
     color: #333;
 }
 
+
 /* Task list */
 
 li {
@@ -83,24 +84,27 @@ li>.delete:hover {
     color: #CF2323;
 }
 
+
 /*------------------------------------------------------------------
     MAIN
 -------------------------------------------------------------------*/
 
 .main {
     display: flex;
-    flex-direction: row;
+    /* flex-direction: row;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    width: 100%;
+    width: 100%; */
+    height: 100%;
     background-color: rgb(77, 78, 78);
 }
 
 .main-side-width {
-    height: 100vh;
+    height: 100%;
     width: 30em;
 }
+
 
 /*------------------------------------------------------------------
     LOGO, DATE & CLOCK
@@ -124,6 +128,7 @@ li>.delete:hover {
     margin-top: 10px;
 }
 
+
 /*------------------------------------------------------------------
     MOBILE BUTTONS FOR MONTH & YEAR
 -------------------------------------------------------------------*/
@@ -136,7 +141,7 @@ li>.delete:hover {
     width: 100%;
 }
 
-.hidden-for-bs{
+.hidden-for-bs {
     display: none;
 }
 
@@ -168,6 +173,7 @@ li>.delete:hover {
     transition: .5s background-color;
 }
 
+
 /*------------------------------------------------------------------
     SIDEBAR FOR TODOS
 -------------------------------------------------------------------*/
@@ -175,6 +181,7 @@ li>.delete:hover {
 .sidebar {
     margin-top: 13px;
 }
+
 
 /*------------------------------------------------------------------
     EDIT
@@ -210,6 +217,7 @@ ul li.editMode label {
     border: 1px solid #105279;
 }
 
+
 /*------------------------------------------------------------------
     DELETE
 -------------------------------------------------------------------*/
@@ -234,6 +242,7 @@ ul li.editMode label {
     color: #ffffff;
 }
 
+
 /*------------------------------------------------------------------
     GODKÄNN
 -------------------------------------------------------------------*/
@@ -256,6 +265,7 @@ ul li.editMode label {
     background: rgb(80, 192, 140);
     border: 1px solid #0e7c49;
 }
+
 
 /*------------------------------------------------------------------
     LÄGG TILL
@@ -280,6 +290,7 @@ ul li.editMode label {
     border: 1px solid #105279;
 }
 
+
 /*------------------------------------------------------------------
     DISPLAY-FORM
 -------------------------------------------------------------------*/
@@ -287,6 +298,7 @@ ul li.editMode label {
 .display-form {
     display: none;
 }
+
 
 /*------------------------------------------------------------------
     EDDIT-FORM
@@ -310,6 +322,7 @@ ul li.editMode label {
     align-items: center;
 }
 
+
 /*------------------------------------------------------------------
     !!!!!!!!!        SECTION1       !!!!!!!!!
     DIVs TO SHOW WHEN EACH TODO STARTS & ENDS
@@ -330,7 +343,7 @@ ul li.editMode label {
     align-items: center;
 }
 
-.divStartEnd{
+.divStartEnd {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -339,7 +352,7 @@ ul li.editMode label {
     margin-bottom: 10px;
 }
 
-.divStartEnd2{
+.divStartEnd2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -348,7 +361,7 @@ ul li.editMode label {
     margin-bottom: 10px;
 }
 
-.divStartEnd3{
+.divStartEnd3 {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -368,20 +381,19 @@ ul li.editMode label {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-
 }
 
 .divTodo {
-  display: inline-block;
-  color: #000000;
-  position: relative;
-  margin-bottom: 8px;
-  background: rgb(255, 179, 81);
-  border-radius: 3px;
-  padding: 0 15px;
-  text-align: center;
-  min-width: 14em;
-  opacity: 80%;
+    display: inline-block;
+    color: #000000;
+    position: relative;
+    margin-bottom: 8px;
+    background: rgb(255, 179, 81);
+    border-radius: 3px;
+    padding: 0 15px;
+    text-align: center;
+    min-width: 14em;
+    opacity: 80%;
 }
 
 label {
@@ -431,21 +443,20 @@ label {
 -------------------------------------------------------------------*/
 
 @media (max-width:750px) {
-.main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100%;
-    background-color: rgb(77, 78, 78)
-}
-.main-side-width {
-    height: 100vh;
-    width: 100%;
-}
-
-.hidden-for-bs {
-    display: block;
-}
+    .main {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        width: 100%;
+        background-color: rgb(77, 78, 78)
+    }
+    .main-side-width {
+        height: 100vh;
+        width: 100%;
+    }
+    .hidden-for-bs {
+        display: block;
+    }
 }
