--- a/styles/todo.css
+++ b/styles/todo.css
@@ -128,6 +128,14 @@ li>.delete:hover {
     margin-top: 10px;
 }
 
+.date {
+    color: white;
+}
+
+.clock {
+    color: white;
+}
+
 
 /*------------------------------------------------------------------
     MOBILE BUTTONS FOR MONTH & YEAR
@@ -179,6 +187,7 @@ li>.delete:hover {
 -------------------------------------------------------------------*/
 
 .sidebar {
+    height: 100%;
     margin-top: 13px;
 }
 
