--- a/styles/todo.css
+++ b/styles/todo.css
@@ -190,7 +190,8 @@ li>.delete:hover {
 .sidebar {
     /* margin-top: 13px; */
     height: 80%;
-    overflow-y: scroll;
+    overflow-y: auto;
+    background-color: rgb(77, 78, 78);
 }
 
 
