--- a/styles/calendar.css
+++ b/styles/calendar.css
@@ -77,7 +77,7 @@
     /* height: 10vh; */
     border: solid 1px #ddd;
     /* height: 5.7rem; */
-    height: 15%;
+    /* height: 13%; */
 }
 
 .calendar .calendar-dates .days .day.empty {
