--- a/styles/todo.css
+++ b/styles/todo.css
@@ -5,7 +5,7 @@
 ul {
     margin: 0;
     padding: 0;
-    background-color: rgb(240, 145, 21);
+    background-color: rgb(90, 90, 90);
     border: 1px solid rgb(0, 0, 0);
 }
 
@@ -110,6 +110,12 @@ li>.delete:hover {
     LOGO, DATE & CLOCK
 -------------------------------------------------------------------*/
 
+.foo-logo {
+    color: rgb(3, 3, 3);
+    border-bottom: 2px solid rgb(167, 167, 167);
+    text-align: center;
+}
+
 .logo-clock-todo {
     display: flex;
     flex-direction: column;
@@ -130,11 +136,11 @@ li>.delete:hover {
 }
 
 .date {
-    color: white;
+    color: rgb(255, 102, 0);
 }
 
 .clock {
-    color: white;
+    color: rgb(255, 102, 0);
 }
 
 
@@ -155,7 +161,7 @@ li>.delete:hover {
 }
 
 .month-Btn {
-    background-color: #1784c3;
+    background-color: rgb(255, 102, 0);
     border: 1px solid #105279;
     color: white;
     text-align: center;
@@ -169,7 +175,7 @@ li>.delete:hover {
 }
 
 .year-Btn {
-    background-color: #1784c3;
+    background-color: rgb(255, 102, 0);
     border: 1px solid #105279;
     color: white;
     text-align: center;
@@ -212,8 +218,8 @@ ul li.editMode label {
 }
 
 .edit {
-    background-color: #1784c3;
-    color: #ffffff;
+    background-color: rgb(77, 78, 78);
+    color: rgb(255, 102, 0);
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -225,7 +231,7 @@ ul li.editMode label {
 }
 
 .edit:hover {
-    background: #06a1d4;
+    background: rgb(91, 92, 92);
     border: 1px solid #105279;
 }
 
@@ -235,8 +241,8 @@ ul li.editMode label {
 -------------------------------------------------------------------*/
 
 .delete {
-    background-color: rgb(250, 82, 82);
-    color: #ffffff;
+    background-color: rgb(77, 78, 78);
+    color: rgb(255, 102, 0);
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -249,9 +255,8 @@ ul li.editMode label {
 }
 
 .delete:hover {
-    background: rgb(255, 131, 131);
+    background: rgb(91, 92, 92);
     border: 1px solid #701500;
-    color: #ffffff;
 }
 
 
@@ -260,8 +265,8 @@ ul li.editMode label {
 -------------------------------------------------------------------*/
 
 .submitBtn {
-    background-color: rgb(43, 184, 118);
-    color: #ffffff;
+    background-color: rgb(77, 78, 78);
+    color: rgb(255, 102, 0);
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -274,7 +279,7 @@ ul li.editMode label {
 }
 
 .submitBtn:hover {
-    background: rgb(80, 192, 140);
+    background: rgb(91, 92, 92);
     border: 1px solid #0e7c49;
 }
 
@@ -284,21 +289,21 @@ ul li.editMode label {
 -------------------------------------------------------------------*/
 
 .addBtn {
-    background-color: #1784c3;
+    background-color: rgb(255, 102, 0);
     color: #ffffff;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     border: 1px solid #105279;
     font-weight: 500;
-    padding: 0.4em 2.6em;
-    border-radius: 50px;
+    padding: 15px 20px;
+    border-radius: 50%;
     margin: 10px 0 30px 0;
     transition: 0.3s;
 }
 
 .addBtn:hover {
-    background: #06a1d4;
+    background: rgb(255, 129, 45);
     border: 1px solid #105279;
 }
 
@@ -345,6 +350,7 @@ ul li.editMode label {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    color: #b6b6b6;
     width: 100%;
 }
 
@@ -380,10 +386,6 @@ ul li.editMode label {
     align-items: center;
 }
 
-.startTid {
-    color: green;
-}
-
 .slutTid {
     padding-left: 10px;
 }
@@ -397,14 +399,15 @@ ul li.editMode label {
 
 .divTodo {
     display: inline-block;
-    color: #000000;
+    color: #b6b6b6;
     position: relative;
     margin-bottom: 8px;
-    background: rgb(255, 179, 81);
+    background: rgb(102, 102, 102);
+    font-weight: bolder;
     border-radius: 3px;
     padding: 0 15px;
     text-align: center;
-    min-width: 14em;
+    width: 80%;
     opacity: 80%;
 }
 
@@ -419,29 +422,43 @@ label {
     align-items: center;
 }
 
+.label {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.h6 {
+    color: #b6b6b6;
+    margin-right: 5px;
+}
+
+
+
 .startTid {
-    background-color: #00af00;
-    color: #ffffff;
+    background-color: rgb(102, 102, 102);
+    color: #b6b6b6;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     border: 2px solid #008b00;
     font-weight: 500;
-    padding: 0.2em 0.9em;
-    border-radius: 50px;
+    padding: 1px 5px;
+    border-radius: 10px;
     margin: 5px;
 }
 
 .slutTid {
-    background-color: #ff0000;
-    color: #ffffff;
+    background-color: rgb(102, 102, 102);
+    color: #b6b6b6;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     border: 2px solid #880000;
     font-weight: 500;
-    padding: 0.2em 0.9em;
-    border-radius: 50px;
+    padding: 1px 5px;
+    border-radius: 10px;
     margin: 5px;
 }
 
