--- a/styles/todo.css
+++ b/styles/todo.css
@@ -422,7 +422,7 @@ label {
     align-items: center;
 }
 
-.label {
+.label1 {
     display: flex;
     flex-direction: row;
     justify-content: center;
