--- a/styles/calendar.css
+++ b/styles/calendar.css
@@ -116,7 +116,7 @@
 }
 
 .solid-divider {
-    border-top: 1px solid #105279;
+    border-top: 1px solid rgb(255, 102, 0);
     margin-top: 12px;
 }
 
