--- a/styles/todo.css
+++ b/styles/todo.css
@@ -5,7 +5,7 @@
 ul {
     margin: 0;
     padding: 0;
-    background-color: rgb(90, 90, 90); 
+    background-color: rgb(90, 90, 90);
     border-top: 1px solid rgb(0, 0, 0);
 }
 
@@ -160,7 +160,7 @@ li>.delete:hover {
     display: none;
 }
 
-.month-Btn {
+.changeDay-Btn {
     background-color: rgb(255, 102, 0);
     border: 1px solid #105279;
     color: white;
@@ -169,21 +169,7 @@ li>.delete:hover {
     padding: 5px;
     position: relative;
     width: 30%;
-    margin: 0 10px;
-    cursor: pointer;
-    transition: .5s background-color;
-}
-
-.year-Btn {
-    background-color: rgb(255, 102, 0);
-    border: 1px solid #105279;
-    color: white;
-    text-align: center;
-    font-size: 14pt;
-    padding: 5px;
-    position: relative;
-    width: 30%;
-    margin: 0 10px;
+    margin: 0 5px;
     cursor: pointer;
     transition: .5s background-color;
 }
@@ -353,6 +339,7 @@ ul li.editMode label {
     align-items: center;
     color: #b6b6b6;
     width: 100%;
+    font-size: 0.8rem;
 }
 
 .section1 {
