--- a/styles/todo.css
+++ b/styles/todo.css
@@ -91,11 +91,6 @@ li>.delete:hover {
 
 .main {
     display: flex;
-    /* flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100%; */
     height: 100%;
     background-color: rgb(77, 78, 78);
 }
@@ -181,7 +176,6 @@ li>.delete:hover {
 -------------------------------------------------------------------*/
 
 .sidebar {
-    /* margin-top: 13px; */
     height: 80%;
     overflow-y: auto;
     background-color: rgb(77, 78, 78);
@@ -306,7 +300,7 @@ ul li.editMode label {
 
 
 /*------------------------------------------------------------------
-    EDDIT-FORM
+    EDIT-FORM
 -------------------------------------------------------------------*/
 
 .display-eddit-form {
