--- a/styles/calendar.css
+++ b/styles/calendar.css
@@ -1,3 +1,5 @@
+/* Calendar */
+
 .calendar {
     display: flex;
     flex-direction: column;
@@ -50,12 +52,15 @@
     min-width: 20%;
     max-width: 35%;
     cursor: pointer;
-    transition: .5s background-color;
+    transition: .5s;
 }
 
 .calendar .calendar-btn:hover {
     background-color: rgb(255, 129, 45);
 }
+
+
+/* Calendar days */
 
 .calendar .calendar-dates .days .day {
     display: flex;
@@ -75,18 +80,8 @@
     border: none;
 }
 
-.calendar .month-year {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 5%;
-}
-
-.calendar-dates {
-    width: 100%;
-    height: 100%;
+.empty.day:hover {
+    cursor: default;
 }
 
 .calendar .calendar-dates .days .day.label {
@@ -97,17 +92,14 @@
     font-weight: bold;
 }
 
-.calendar .calendar-dates .days .day.label:hover {
-    cursor: default;
+.calendar-day {
+    position: relative;
 }
 
-.clear {
-    clear: both;
-}
-
-.solid-divider {
-    border-top: 1px solid rgb(255, 102, 0);
-    margin-top: 12px;
+.day:hover {
+    cursor: pointer;
+    background-color: rgb(255, 154, 87);
+    transition: 0.3s;
 }
 
 .active-day {
@@ -116,14 +108,8 @@
     transition: 0.3s;
 }
 
-.days {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.holiday {
-    order: 1;
-    margin: 0;
+.active-day:hover {
+    background-color: rgb(255, 153, 86);
 }
 
 .day span {
@@ -139,6 +125,38 @@
     pointer-events: none;
 }
 
+.calendar .calendar-dates .days .day.label:hover {
+    cursor: default;
+}
+
+.days {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.calendar .month-year {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 5%;
+}
+
+.calendar-dates {
+    width: 100%;
+    height: 100%;
+}
+
+.weekdays {
+    height: 10%;
+}
+
+.holiday {
+    order: 1;
+    margin: 0;
+}
+
 .todo-count {
     align-self: flex-end;
     position: absolute;
@@ -147,30 +165,20 @@
     margin: 10px 5px 0 0;
 }
 
-.calendar-day {
-    position: relative;
-}
 
-.day:hover {
-    cursor: pointer;
-    background-color: rgb(255, 154, 87);
-    transition: 0.3s;
-}
-
-.active-day:hover {
-    background-color: rgb(255, 153, 86);
-}
-
-.empty.day:hover {
-    cursor: default;
-}
+/* Misc */
 
 .full-height {
     height: 85%;
 }
 
-.weekdays {
-    height: 10%;
+.clear {
+    clear: both;
+}
+
+.solid-divider {
+    border-top: 1px solid rgb(255, 102, 0);
+    margin-top: 12px;
 }
 
 
